Fix layout shifts in some parts of the screen on some screen sizes.

--- a/app/globals.css
+++ b/app/globals.css
@@ -75,7 +75,3 @@
     @apply bg-background text-foreground;
   }
 }
-
-body[data-scroll-locked] {
-  min-width: 100%;
-}
